Commit from Bolt to GitHub

--- a/index.html
+++ b/index.html
@@ -1,10 +1,56 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    
+    <!-- Primary Meta Tags -->
+    <title>Lumeth - AI-Powered Beauty Services & Salon Management Platform</title>
+    <meta name="title" content="Lumeth - AI-Powered Beauty Services & Salon Management Platform">
+    <meta name="description" content="Transform your beauty business with Lumeth's AI-powered platform. Smart booking, client management, and business analytics for salons, spas, and independent beauty professionals.">
+    <meta name="keywords" content="AI beauty app, salon management software, beauty business platform, appointment booking system, beauty professional app, makeup artist booking, salon scheduling software, beauty service management, AI beauty recommendations, salon business tools">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://lumeth.com/">
+    <meta property="og:title" content="Lumeth - AI-Powered Beauty Services & Salon Management">
+    <meta property="og:description" content="Revolutionary AI platform for beauty businesses. Streamline appointments, grow your client base, and boost revenue with smart analytics and automated scheduling.">
+    <meta property="og:image" content="https://lumeth.com/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://lumeth.com/">
+    <meta property="twitter:title" content="Lumeth - Smart Beauty Business Management">
+    <meta property="twitter:description" content="AI-powered platform for salons, spas, and beauty professionals. Intelligent booking, business management, and client engagement tools.">
+    <meta property="twitter:image" content="https://lumeth.com/twitter-image.jpg">
+
+    <!-- Additional SEO Tags -->
+    <meta name="author" content="Lumeth">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://lumeth.com/">
+
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "SoftwareApplication",
+        "name": "Lumeth",
+        "applicationCategory": "BusinessApplication",
+        "operatingSystem": "Android, iOS",
+        "description": "AI-powered beauty services and salon management platform",
+        "offers": {
+          "@type": "Offer",
+          "price": "0",
+          "priceCurrency": "USD"
+        },
+        "aggregateRating": {
+          "@type": "AggregateRating",
+          "ratingValue": "4.9",
+          "ratingCount": "1000"
+        }
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
