Commit from Bolt to GitHub

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Lumeth - AI-Powered Beauty Services & Salon Management Platform</title>
     <meta name="title" content="Lumeth - AI-Powered Beauty Services & Salon Management Platform">
     <meta name="description" content="Transform your beauty business with Lumeth's AI-powered platform. Smart booking, client management, and business analytics for salons, spas, and independent beauty professionals.">
-    <meta name="keywords" content="AI beauty app, salon management software, beauty business platform, appointment booking system, beauty professional app, makeup artist booking, salon scheduling software, beauty service management, AI beauty recommendations, salon business tools">
+    <meta name="keywords" content="AI beauty platform, salon management software, beauty business platform, appointment booking system, beauty professional app, salon scheduling software, beauty service management">
+    <meta name="author" content="Lumeth">
+    <meta name="robots" content="index, follow">
+    <meta name="language" content="English">
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -17,6 +20,8 @@
     <meta property="og:title" content="Lumeth - AI-Powered Beauty Services & Salon Management">
     <meta property="og:description" content="Revolutionary AI platform for beauty businesses. Streamline appointments, grow your client base, and boost revenue with smart analytics and automated scheduling.">
     <meta property="og:image" content="https://lumeth.com/og-image.jpg">
+    <meta property="og:site_name" content="Lumeth">
+    <meta property="og:locale" content="en_US">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
@@ -24,11 +29,7 @@
     <meta property="twitter:title" content="Lumeth - Smart Beauty Business Management">
     <meta property="twitter:description" content="AI-powered platform for salons, spas, and beauty professionals. Intelligent booking, business management, and client engagement tools.">
     <meta property="twitter:image" content="https://lumeth.com/twitter-image.jpg">
-
-    <!-- Additional SEO Tags -->
-    <meta name="author" content="Lumeth">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://lumeth.com/">
+    <meta name="twitter:creator" content="@Lumeth_official">
 
     <!-- Structured Data -->
     <script type="application/ld+json">
@@ -48,9 +49,53 @@
           "@type": "AggregateRating",
           "ratingValue": "4.9",
           "ratingCount": "1000"
+        },
+        "author": {
+          "@type": "Organization",
+          "name": "Lumeth",
+          "url": "https://lumeth.com"
+        },
+        "publisher": {
+          "@type": "Organization",
+          "name": "Lumeth",
+          "logo": {
+            "@type": "ImageObject",
+            "url": "https://lumeth.com/logo.png"
+          }
         }
       }
     </script>
+
+    <!-- Organization Schema -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Lumeth",
+        "url": "https://lumeth.com",
+        "logo": "https://lumeth.com/logo.png",
+        "sameAs": [
+          "https://www.facebook.com/people/Lumeth/61560421378410",
+          "https://www.instagram.com/lumethapp",
+          "https://x.com/Lumeth_official"
+        ],
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+1-555-123-4567",
+          "contactType": "customer service",
+          "availableLanguage": "English"
+        }
+      }
+    </script>
+
+    <!-- Additional SEO Tags -->
+    <link rel="canonical" href="https://lumeth.com/">
+    <link rel="alternate" hreflang="en" href="https://lumeth.com/">
+    <meta name="theme-color" content="#000000">
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="Lumeth">
   </head>
   <body>
     <div id="root"></div>
